# External Contributions to the InternetWide Architecture
#
# These components may be useful in combination with the components
# in the "real" internetwide components.  They are not built by
# default.
#
# From: Rick van Rein <rick@openfortress.nl>


# option(CONTRIB_contrib1 "Contribution #1" OFF)
# if(CONTRIB_contrib1)
# 	add_subdirectory(contrib1)
# endif()

# option(CONTRIB_contrib2 "Contribution #2" OFF)
# if(CONTRIB_contrib2)
# 	add_subdirectory(contrib2)
# endif()

# option(CONTRIB_contrib3 "Contribution #3" OFF)
# if(CONTRIB_contrib3)
# 	add_subdirectory(contrib3)
# endif()
