# Local Extensions to the InternetWide Architecture
#
# These components may be useful in combination with the components
# in the "real" internetwide components.  They are customarily built,
# but will not be included in the mainstream distribution.  Having
# local extensions in a separate place avoids the need for local use
# cases to modify existing components.
#
# From: Rick van Rein <rick@openfortress.nl>


# add_subdirectory(local1)
# add_subdirectory(local2)
# add_subdirectory(local3)
